
2004/01/04 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added GWEN_TYPE_UINT32 (this is needed for crossplatform compilation,
  e.g. for PalmOS in short-mode)
- file "types.h" now gets installed
- macros in "debug.h" now use the builtin function GWEN_Debug_Snprintf.
  This is a limited function imitating "snprintf" with a very very limited
  set of conversions (for now only "s", "c", "d" and "c" are supported.
  But this already is enough for debugging purposes). This is needed on
  PalmOS since there is no snprintf.


===========================================================================
MARK: released gwenhywfar-0.9.4rc2 (2004/01/03)
===========================================================================


2004/01/03 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- prepared next release


2003/12/29 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- started working on PalmOS port (just a small start, there still is very
  much to do... well, actually more than I anticipated. However, it still
  seems possible ;-)


2003/12/28 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- renamed Christian's new "GWEN_DB_isSomething" functions to
  "GWEN_DB_IsSomething" (it is handled this way in GWEN_Error_IsOk, so we
  have to keep it uniform)
- added "process" to OS module. This allows for portably starting programs
  (as needed by the upcoming version of Libchipcard)
- added a graph to the documentation of the DB module to demonstrate the
  internal structure
- module XML: Added new flag which allows to ignore an <include> tag
- added doc/STYLE
- changed some function definition to comply to the STYLE odcument
- changed name of function GWEN_Md_Hash and GWEN_Md_UnregisterAllProviders
  to GWEN_MD_Hash and GWEN_MD_UnregisterAllProviders, according to
  my own style guid :-}
  
